[package]
name = "air-gradient-prom-rs"
version = "0.0.1"
edition = "2021"

[features]
default = ["http-listener", "push-gateway"]
async-runtime = ["tokio", "hyper"]
http-listener = ["async-runtime", "hyper/server", "ipnet"]
push-gateway = ["async-runtime", "hyper/client", "hyper-tls", "tracing"]

[dependencies]
metrics = { version = "^0.21" }
metrics-util = { version = "^0.15", default-features = false, features = [
  "recency",
  "registry",
  "summary",
] }
thiserror = { version = "1", default-features = false }
quanta = { version = "0.11", default-features = false }
indexmap = { version = "1", default-features = false }
base64 = { version = "0.21.0", default-features = false, features = ["std"] }

# Optional
hyper = { version = "0.14", default-features = false, features = [
  "tcp",
  "http1",
], optional = true }
ipnet = { version = "2", optional = true }
tokio = { version = "1", features = ["rt", "net", "time"], optional = true }
tracing = { version = "0.1.26", optional = true }
hyper-tls = { version = "0.5.0", optional = true }

# Dev
tracing-subscriber = "0.3"
rand = "0.8"
proptest = "1"
metrics-exporter-prometheus = "0.12.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
