[package]
name = "air-gradient-prom-rs"
version = "0.0.1"
edition = "2021"


[dependencies]
metrics = { version = "0.24" }
metrics-util = { version = "0.20", default-features = false, features = [
  "recency",
  "registry",
] }

# Dev
tracing-subscriber = "0.3"
metrics-exporter-prometheus = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
